# hydraide

./: .env_sample  .gitignore  .gitmessage  .goreleaser.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  entrypoint.sh  go.mod  go.sum  pull_request_template.md
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  contributor-application.yml  discussion.yml  docs-improvement.yml  example-request.yml  feature-request.yml
.github/workflows/: cd_server.yaml  ci.yaml
app/graylog/: graylog.go  graylog_test.go
app/hydraidectl/: main.go
app/name/: README.md  name.go  name_test.go
app/server/: Dockerfile  Makefile  main.go
docs/: CNAME  for-ceos.md  how-to-install-hydraide.md  hydraide-questions-answers-for-llm.md  index.html
docs/comparisons/: hydra-vs-mongodb.md  hydra-vs-redis.md  hydraide-vs-mongodb.md  hydraide-vs-redis.md
docs/maintainers/: maintainers.md
docs/thinking-in-hydra/: clean-system.md  distributed-architecture.md  how-to-install-update-hydra.md  indexing.md  locking.md  naming-convention.md  subscriptions.md  swamp-pattern.md  thinking-in-hydra.md  treasures.md
docs/thinking-in-hydraide/: go_example.md  (+11 more)
installation/: README.md
proto/: hydra.proto  hydraide.proto
sdk/python/hydraidepy/: README.md  pyproject.toml
sdk/python/hydraidepy/src/hydraidepy/: __init__.py
sdk/python/hydraidepy/src/hydraidepy/name/: __init__.py  name.py
sdk/python/hydraidepy/tests/unit/hydraidepy/name/: test_name.py
(+147 files in other folders)
