[project]
name = "hydraidepy"
version = "0.1.0"
description = "Python SDK for the hydraide database"
readme = "README.md"
authors = [
    { name = "Ramon Vermeulen", email = "ramonvermeulen98@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "xxhash>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
[tool.ruff]
exclude = ["generated"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["generated"]

[tool.pytest.ini_options]
testpaths = ["tests/unit/hydraidepy"]
pythonpath = ["src/hydraidepy"]
